; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00usb.c_rt2x00usb_regbusy_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00usb.c_rt2x00usb_regbusy_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2x00_dev = type { i32 }
%struct.rt2x00_field32 = type { i32 }

@DEVICE_STATE_PRESENT = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@REGISTER_BUSY_COUNT = common dso_local global i32 0, align 4
@REGISTER_BUSY_DELAY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [64 x i8] c"Indirect register access failed: offset=0x%.08x, value=0x%.08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rt2x00usb_regbusy_read(%struct.rt2x00_dev* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.rt2x00_field32, align 4
  %7 = alloca %struct.rt2x00_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = getelementptr inbounds %struct.rt2x00_field32, %struct.rt2x00_field32* %6, i32 0, i32 0
  store i32 %2, i32* %11, align 4
  store %struct.rt2x00_dev* %0, %struct.rt2x00_dev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load i32, i32* @DEVICE_STATE_PRESENT, align 4
  %13 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %7, align 8
  %14 = getelementptr inbounds %struct.rt2x00_dev, %struct.rt2x00_dev* %13, i32 0, i32 0
  %15 = call i32 @test_bit(i32 %12, i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %4
  %18 = load i32, i32* @ENODEV, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %5, align 4
  br label %50

20:                                               ; preds = %4
  store i32 0, i32* %10, align 4
  br label %21

21:                                               ; preds = %40, %20
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* @REGISTER_BUSY_COUNT, align 4
  %24 = icmp ult i32 %22, %23
  br i1 %24, label %25, label %43

25:                                               ; preds = %21
  %26 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @rt2x00usb_register_read_lock(%struct.rt2x00_dev* %26, i32 %27, i32* %28)
  %30 = load i32*, i32** %9, align 8
  %31 = load i32, i32* %30, align 4
  %32 = getelementptr inbounds %struct.rt2x00_field32, %struct.rt2x00_field32* %6, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @rt2x00_get_field32(i32 %31, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %25
  store i32 1, i32* %5, align 4
  br label %50

37:                                               ; preds = %25
  %38 = load i32, i32* @REGISTER_BUSY_DELAY, align 4
  %39 = call i32 @udelay(i32 %38)
  br label %40

40:                                               ; preds = %37
  %41 = load i32, i32* %10, align 4
  %42 = add i32 %41, 1
  store i32 %42, i32* %10, align 4
  br label %21

43:                                               ; preds = %21
  %44 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %7, align 8
  %45 = load i32, i32* %8, align 4
  %46 = load i32*, i32** %9, align 8
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @rt2x00_err(%struct.rt2x00_dev* %44, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0), i32 %45, i32 %47)
  %49 = load i32*, i32** %9, align 8
  store i32 -1, i32* %49, align 4
  store i32 0, i32* %5, align 4
  br label %50

50:                                               ; preds = %43, %36, %17
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @test_bit(i32, i32*) #1

declare dso_local i32 @rt2x00usb_register_read_lock(%struct.rt2x00_dev*, i32, i32*) #1

declare dso_local i32 @rt2x00_get_field32(i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @rt2x00_err(%struct.rt2x00_dev*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
